--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "^2.1.3",
     "redux": "^4.0.1",
     "redux-form": "^7.4.2",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "terser": "^3.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
